my-cluster1/order-k8s-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: default
spec:
  ports:
  - port: 8012
    protocol: TCP
    targetPort: 8012
  selector:
    app: order-service-app
  sessionAffinity: None
  type: ClusterIP #internal IPs withing K8s cluster,exposed to external IP with Ingress Load balancer service
status:
  loadBalancer: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-app-deployment
spec:
  selector:
    matchLabels:
      app: order-service-app
  replicas: 3 # tells deployment to run N pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: order-service-app
    spec:
      containers:
      - name: order-service-app
        image: rajivmca2004/order-service #Harbor or Docker hub image path and name
        ports:
        - containerPort: 8012
          name: server
      imagePullSecrets: # Only required with private image repository like Harbor,jFrog etc
        - name: regcred
