my-cluster1/gateway-cluster1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: onlinestore-demo-cluster1-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: onlinestore-demo
spec:
  hosts:
  - "*"
  gateways:
  - onlinestore-demo-cluster1-gateway
  http:
  - match:
    - uri:
        prefix: /orders
    route:
    - destination:
        host: order-service
        port:
          number: 8012
